# PC-Utilties-using-Python

./: CLAUDE.md  COMPLIANCE_SUMMARY.txt  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_COMPLIANCE.md  DOCUMENTATION_INDEX.md  FILES_CREATED.txt  LGPL_QUICK_START.txt  LICENSE.txt  MYSQL_WORKBENCH_IMPORT_GUIDE.md  QUICK_START.md  README.md  REDESIGN_COMPLETE.md  REDESIGN_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SETUP_COMPLETE.txt  START_HERE_LGPL.txt  UI_COMPARISON.md  UI_REDESIGN.md  VISUAL_MOCKUP.md  _ul  aaa_features to add.txt  auto_setup.bat  create_package.bat  dfsdf  download_manager.py  fix_venv.bat  fix_venv.ps1  install.bat  install_context7.bat  install_simple.bat  main.py  mysql_import_with_db_creation.bat  pyproject.toml  quick_security_test.py  requirements.txt  run.bat  run_app.bat  run_app.ps1  run_debug.bat  secure_install.py  (+2 more)
.claude/: settings.local.json
LICENSES/: PYSIDE6-LGPLV3.txt  THIRD-PARTY-LICENSES.txt
pc_utilities_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: main.py  mysql_import_helpermysql_import_helper.py
src/config/: __init__.py  settings.py
src/features/image_converter/: worker.py
src/features/image_converter/tests/: test_image_converter.py
src/features/office_converter/: worker.py
src/features/office_converter/tests/: test_office_converter.py
src/features/ui/: __init__.py  components.py  converter_handlers.py  design_system.py  download_handlers.py  main_window_legacy.py.backup  modern_main_window.py  news_feed_service.py  state_manager.py  ui_config.py
src/features/ui/tabs/: __init__.py  antivirus_deals_tab.py  converters_tab.py  news_tab.py  security_tab.py
src/features/ui/tabs/tests/: __init__.py  test_converters_tab.py  test_news_tab.py  test_security_tab.py
src/features/ui/tests/: conftest.py  test_frozen_ui.py  test_integration.py  test_main_window.py  test_state_management.py  test_ui_config.py
src/features/ui/tests/design_system/: __init__.py  test_immutability.py  test_templates.py  test_validation.py
src/features/ui/windows/: __init__.py  header.py  main_menu.py  status_indicator.py
src/features/ui/windows/tests/: __init__.py  test_header.py  test_status_indicator.py
src/mysql_import_helper/: __init__.py  mysql_import_helper.py
src/mysql_import_helper/tests/: test_core_functionality.py  test_mysql_import_helper.py
