[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-utilities-manager"
version = "2.0.0"
description = "A modern Windows desktop application for downloading PC utilities and converting files"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "PC Utilities Team", email = "support@pcutilities.com"}
]
maintainers = [
    {name = "PC Utilities Team", email = "support@pcutilities.com"}
]
keywords = ["windows", "utilities", "converter", "security", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Office/Business",
    "Topic :: Security",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.59.2",
    "greenlet>=3.2.4",
    "idna>=3.10",
    "iniconfig>=2.3.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.3.2",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydantic_core>=2.33.2",
    "Pygments>=2.19.2",
    "PyMySQL>=1.1.1",
    "pyparsing>=3.2.3",
    "PySide6>=6.9.1",
    "PySide6_Addons>=6.9.1",
    "PySide6_Essentials>=6.9.1",
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pywin32>=311",
    "requests>=2.32.5",
    "shiboken6>=6.9.1",
    "six>=1.17.0",
    "SQLAlchemy>=2.0.43",
    "typing-inspection>=0.4.1",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "xlsxwriter>=3.2.9",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]
build = [
    "PyInstaller>=6.0.0",
    "setuptools>=61.0",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/pc-utilities/pc-utilities-manager"
Documentation = "https://github.com/pc-utilities/pc-utilities-manager/docs"
Repository = "https://github.com/pc-utilities/pc-utilities-manager.git"
"Bug Tracker" = "https://github.com/pc-utilities/pc-utilities-manager/issues"
Changelog = "https://github.com/pc-utilities/pc-utilities-manager/blob/main/CHANGELOG.md"

[project.scripts]
pc-utilities = "src.main:main"
mysql-import-helper = "src.mysql_import_helper.mysql_import_helper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.jpeg", "*.gif", "*.ico", "*.bat", "*.md", "*.txt"]

# Ruff configuration for linting and formatting
[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["ARG", "PLR2004"]  # magic values allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration for type checking
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "shiboken6.*",
    "pywin32.*",
    "mysql.*",
    "PIL.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-focused",
    "gui: marks tests that require GUI",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"